/**
 * Tests for Python Service gRPC Client
 */
import { describe, it, expect, vi, beforeEach, afterEach } from 'vitest'

// Types tests (these don't need mocking)
describe('Python Service Client Types', () => {
  describe('UploadedFile', () => {
    it('should have correct structure', () => {
      const file = {
        name: 'test.pdf',
        content: Buffer.from('test'),
        mime_type: 'application/pdf',
      }

      expect(file.name).toBe('test.pdf')
      expect(file.mime_type).toBe('application/pdf')
      expect(Buffer.isBuffer(file.content)).toBe(true)
    })
  })

  describe('FeatureItem', () => {
    it('should have correct structure', () => {
      const feature = {
        name: 'User Login',
        description: 'Allow users to login',
        priority: 'high',
        tags: ['auth', 'security'],
      }

      expect(feature.name).toBe('User Login')
      expect(feature.priority).toBe('high')
      expect(feature.tags).toContain('auth')
    })

    it('should support all priority levels', () => {
      const priorities = ['high', 'medium', 'low']
      priorities.forEach((p) => {
        const feature = { name: 'Test', description: '', priority: p, tags: [] }
        expect(['high', 'medium', 'low']).toContain(feature.priority)
      })
    })
  })

  describe('UIElement', () => {
    it('should have correct structure', () => {
      const element = {
        name: 'Submit Button',
        type: 'button',
        description: 'Submits the form',
      }

      expect(element.name).toBe('Submit Button')
      expect(element.type).toBe('button')
    })

    it('should support various element types', () => {
      const types = ['button', 'input', 'select', 'textarea', 'checkbox', 'radio']
      types.forEach((type) => {
        const element = { name: 'Test', type, description: '' }
        expect(element.type).toBe(type)
      })
    })
  })

  describe('DataField', () => {
    it('should have correct structure', () => {
      const field = {
        name: 'email',
        type: 'string',
        description: 'User email address',
        required: true,
      }

      expect(field.name).toBe('email')
      expect(field.type).toBe('string')
      expect(field.required).toBe(true)
    })

    it('should support common data types', () => {
      const types = ['string', 'number', 'boolean', 'date', 'array', 'object']
      types.forEach((type) => {
        const field = { name: 'test', type, description: '', required: false }
        expect(field.type).toBe(type)
      })
    })
  })

  describe('Reference', () => {
    it('should have correct structure', () => {
      const reference = {
        type: 'url',
        url: 'https://example.com',
        description: 'Reference documentation',
      }

      expect(reference.type).toBe('url')
      expect(reference.url).toContain('https://')
    })
  })

  describe('StructuredContent', () => {
    it('should have correct structure', () => {
      const content = {
        content_type: 'requirement',
        summary: 'Test summary',
        features: [],
        ui_elements: [],
        data_fields: [],
        references: [],
      }

      expect(content.content_type).toBe('requirement')
      expect(Array.isArray(content.features)).toBe(true)
    })

    it('should support all content types', () => {
      const types = ['requirement', 'design', 'data', 'reference', 'other', 'unknown']
      types.forEach((type) => {
        const content = {
          content_type: type,
          summary: '',
          features: [],
          ui_elements: [],
          data_fields: [],
          references: [],
        }
        expect(content.content_type).toBe(type)
      })
    })
  })

  describe('ProcessedResult', () => {
    it('should have correct structure for success', () => {
      const result = {
        file_name: 'test.pdf',
        file_type: 'pdf',
        raw_content: 'Test content',
        structured: {
          content_type: 'requirement',
          summary: '',
          features: [],
          ui_elements: [],
          data_fields: [],
          references: [],
        },
      }

      expect(result.file_name).toBe('test.pdf')
      expect(result.file_type).toBe('pdf')
      expect(result.structured).toBeDefined()
    })

    it('should have correct structure for error', () => {
      const result = {
        file_name: 'bad.pdf',
        file_type: 'pdf',
        raw_content: '',
        error: 'Failed to process file',
      }

      expect(result.error).toBe('Failed to process file')
    })
  })

  describe('IntegratedRequirement', () => {
    it('should have correct structure', () => {
      const integrated = {
        summary: 'Integrated requirements',
        features: [{ name: 'Login', description: '', priority: 'high', tags: [] }],
        tech_suggestions: ['React', 'Node.js'],
        risks: ['Security concerns'],
        sources: ['prd.pdf', 'design.png'],
      }

      expect(integrated.summary).toBe('Integrated requirements')
      expect(integrated.tech_suggestions).toContain('React')
      expect(integrated.sources.length).toBe(2)
    })
  })

  describe('GrowthAdvice', () => {
    it('should have correct structure', () => {
      const advice = {
        id: 'advice123',
        type: 'growth',
        priority: 'high',
        problem: 'Low user retention',
        suggestion: 'Implement email campaigns',
        expected_impact: '+20% retention',
        metrics: ['retention_rate', 'dau'],
        implementation: {
          type: 'feature',
          estimated_cost: 500,
          estimated_time: '1 week',
          difficulty: 'medium',
        },
      }

      expect(advice.type).toBe('growth')
      expect(advice.priority).toBe('high')
      expect(advice.metrics).toContain('retention_rate')
    })

    it('should support all advice types', () => {
      const types = ['growth', 'conversion', 'engagement', 'retention']
      types.forEach((type) => {
        const advice = { type, priority: 'medium' }
        expect(advice.type).toBe(type)
      })
    })
  })

  describe('Experience', () => {
    it('should have correct structure', () => {
      const experience = {
        id: 'exp123',
        type: 'solution',
        category: 'authentication',
        title: 'OAuth2 Implementation',
        description: 'Complete OAuth2 flow',
        complexity: 'medium',
        relevance_score: 0.95,
      }

      expect(experience.type).toBe('solution')
      expect(experience.category).toBe('authentication')
      expect(experience.relevance_score).toBeGreaterThan(0)
      expect(experience.relevance_score).toBeLessThanOrEqual(1)
    })

    it('should support all experience types', () => {
      const types = ['solution', 'pattern', 'pitfall', 'optimization', 'integration']
      types.forEach((type) => {
        const exp = { type }
        expect(['solution', 'pattern', 'pitfall', 'optimization', 'integration']).toContain(exp.type)
      })
    })
  })

  describe('CodeFile', () => {
    it('should have correct structure', () => {
      const codeFile = {
        path: 'src/auth/oauth.ts',
        language: 'typescript',
        content: 'export function oauth() {}',
      }

      expect(codeFile.path).toContain('oauth')
      expect(codeFile.language).toBe('typescript')
    })

    it('should support common languages', () => {
      const languages = ['typescript', 'javascript', 'python', 'go', 'rust', 'java']
      languages.forEach((lang) => {
        const file = { path: 'test', language: lang, content: '' }
        expect(file.language).toBe(lang)
      })
    })
  })
})

// Mock tests for client functions
describe('Python Service Client Functions', () => {
  // Mock gRPC
  vi.mock('@grpc/grpc-js', () => ({
    credentials: {
      createInsecure: vi.fn(() => ({})),
    },
    loadPackageDefinition: vi.fn(() => ({
      thinkus: {
        document: {
          DocumentService: vi.fn(() => ({
            ProcessFiles: vi.fn(),
            ProcessURL: vi.fn(),
            IntegrateRequirements: vi.fn(),
            GenerateGrowthAdvice: vi.fn(),
            MatchExperience: vi.fn(),
            AddExperience: vi.fn(),
            close: vi.fn(),
          })),
        },
      },
    })),
  }))

  vi.mock('@grpc/proto-loader', () => ({
    loadSync: vi.fn(() => ({})),
  }))

  describe('processFiles', () => {
    it('should handle empty files array', async () => {
      const files: any[] = []
      const userId = 'user123'

      // Simulate empty response
      const response = { results: [] }
      expect(response.results).toHaveLength(0)
    })

    it('should handle multiple files', async () => {
      const files = [
        { name: 'file1.pdf', content: Buffer.from(''), mime_type: 'application/pdf' },
        { name: 'file2.docx', content: Buffer.from(''), mime_type: 'application/docx' },
      ]

      expect(files).toHaveLength(2)
      expect(files[0].name).toBe('file1.pdf')
    })
  })

  describe('processURL', () => {
    it('should validate URL format', () => {
      const validURLs = ['https://example.com', 'http://localhost:3000', 'https://api.example.com/path']

      validURLs.forEach((url) => {
        expect(url.startsWith('http')).toBe(true)
      })
    })

    it('should reject invalid URLs', () => {
      const invalidURLs = ['not-a-url', 'ftp://invalid', '']

      invalidURLs.forEach((url) => {
        expect(url.startsWith('http')).toBe(false)
      })
    })
  })

  describe('integrateRequirements', () => {
    it('should have default parameters', () => {
      const defaults = {
        existingRequirement: '',
        useAI: true,
      }

      expect(defaults.existingRequirement).toBe('')
      expect(defaults.useAI).toBe(true)
    })
  })

  describe('generateGrowthAdvice', () => {
    it('should have default parameters', () => {
      const defaults = {
        category: 'default',
        forceRefresh: false,
      }

      expect(defaults.category).toBe('default')
      expect(defaults.forceRefresh).toBe(false)
    })
  })

  describe('matchExperience', () => {
    it('should have default parameters', () => {
      const defaults = {
        category: '',
        complexity: '',
        limit: 10,
      }

      expect(defaults.limit).toBe(10)
      expect(defaults.category).toBe('')
    })

    it('should support limit parameter', () => {
      const limits = [5, 10, 20, 50]

      limits.forEach((limit) => {
        expect(limit).toBeGreaterThan(0)
      })
    })
  })
})
